# StockScreener

./: .env.example  .gitignore  README.md  __init__.py  analyze_data.py  analyze_stability.py  dd.py  debug_monthly_predictions.py  kya karna  prediction_consistency.py  pyproject.toml  pytest.ini  requirements.txt  run_screener.sh  test_multi_period_predictions.py
config/: nifty100.properties  nifty_test.properties  requirements-prediction.txt  screener_config.properties
config/tickers/: nifty_50.json  nifty_500.json  nifty_pharma.json
dashboard/: dashboard.py
data/: nifty50_screener_results.xlsx
data/cache/: pred_5b41c58d441d75138f9d58aff1e9e295.json
data/output/: value_analysis.xlsx  value_investment_report.xlsx
docs/: DASHBOARD_IMPLEMENTATION_20250813_224500.md  INDEX.md  PRICE_PREDICTION_GUIDE_20250813_223909.md  PRICE_PREDICTION_IMPLEMENTATION_20250813_223909.md  TRANSFORMATION_SUMMARY_20250813_223909.md  authentic_data_guarantee.md  cleanup_summary_20250813_222725.md  configuration_parameters.md  dark_theme_dashboard_update.md  dashboard_issues_fix.md  development_roadmap.md  division_by_zero_fix.md  prompts_library_implementation.md  scripts_documentation.md
examples/: prediction_examples.py  prompts_usage_examples.py
scripts/: advanced_cleanup.py  analyze_stability.py  check_excel.py  clean_project.py  launcher.py  migrate_prompts.py  predict_prices.py  prediction_consistency.py  run_ai_screener.py  run_basic_screener.py  run_dashboard.py  run_screener.py  test_dashboard.py  update_ticker_dates.py
scripts/archive/: monitor_progress.py  recover_analysis.py  run_comprehensive_analysis.py
services/: excelExporter.py  stockAnalyzer.py
src/: constants.py  genericScreener.py  indicators.py  readME.txt  screener.py  stockScreenerScript.py  stockScreenerUpdated.py  stockScreenerUpdatedold.py
stock_screener/: __init__.py
stock_screener/cli/: main.py
stock_screener/config/: nifty50.properties  screener_config.properties  tickers.properties
stock_screener/core/: __init__.py  analyzer.py  constants.py  indicators.py  screener.py
stock_screener/dashboard/: __init__.py  column_mapper.py  dashboard.py  dashboard_backup_20250815_015911.py  portfolio_manager.py
stock_screener/prediction_models/: README.md  __init__.py  base_model.py  fundamental_analysis_model.py  machine_learning_model.py  pattern_recognition_model.py  prediction_orchestrator.py  technical_analysis_model.py  time_series_model.py  volume_analysis_model.py
stock_screener/prompts/: README.md  __init__.py  analysis_prompts.py  (+3 more)
tests/: __init__.py  conftest.py  run_tests.py
utils/: configLoader.py  constants.py  screenerScraper.py  screener_scraper.py  tickerLoader.py  ticker_loader.py  utils.py
(+40 files in other folders)
