[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-screener"
version = "2.0.0"
description = "A comprehensive stock screening tool with AI-powered analysis"
readme = "README.md"
authors = [
    {name = "Chirag Sharma", email = "chirag@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["stock", "screener", "analysis", "AI", "investing", "value-investing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["stock", "screener", "value investing", "financial analysis", "investment"]

dependencies = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "lxml>=4.9.0",
]

[project.scripts]
stock-screener = "stock_screener.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
dashboard = [
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
]
ai = [
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/chirag-sharma/StockScreener"
"Bug Reports" = "https://github.com/chirag-sharma/StockScreener/issues"
"Source" = "https://github.com/chirag-sharma/StockScreener"

[project.scripts]
stock-screener = "src.screener:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "services*", "utils*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
